@startuml
/'

Module:	cPMS7003.plantuml

Function:
	PlantUML reference source for cPMS7003 classes

Copyright:
	See accompanying LICENSE file at
	https:://github.com/mcci-catena/Catena-Arduino-Platform

Author:
	Terry Moore, MCCI Corporation	July 2019

Notes:
	PlantUML images in REAMDE.md are generated by pasting this file into
	the server at http://www.plantuml.com/plantuml, and grabbing the
	resulting URLs.

'/

hide empty members

namespace McciCatena {
abstract class cPollableObject
}

McciCatena ..d[hidden].. McciCatenaPMS7003

namespace McciCatenaPMS7003 {

abstract class cPMS7003Hal
class cPMS7003Hal_4630
class cPMS7003

cPMS7003Hal <|-- cPMS7003Hal_4630

McciCatena.cPollableObject <|-- cPMS7003
cPMS7003Hal "1" <-l-* "n" cPMS7003
}
@enduml
